# ai-agent-test

./: main.py  pyproject.toml
app/ollama/: common.py  ollama_agent.py  ollama_python_perl.py  ollama_tools.py
