[project]
name = "ai-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.7",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

# 主镜像源
index-url = "https://mirrors.aliyun.com/pypi/simple/"
extra-index-urls = [
    "https://pypi.tuna.tsinghua.edu.cn/simple/",
    "https://mirrors.cloud.tencent.com/pypi/simple/"
]
